# scorimmo-python

./: .gitignore  README.md  pyproject.toml
examples/: fetch_leads.py  flask_webhook.py
scorimmo/: __init__.py  client.py  webhook.py
tests/: test_client.py  test_webhook.py
