[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scorimmo"
version = "0.1.0"
description = "Official Scorimmo SDK for Python — API client & webhook handler"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["scorimmo", "real-estate", "crm", "leads", "webhook", "sdk", "immobilier"]
dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
flask = ["flask>=3.0.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["scorimmo*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
